# CpCowsay

./: CMakeLists.txt  appveyor.yml  conanfile.py  project.lua  readme.md
src/: Dependencies.mcpp  cowsay.cpp  cowsay.mcpp
